# depository

./: .gitignore  .vimrc  Readme.md  pyproject.toml  requirements.txt
AI/: PDTapp.txt  PDTmodel.txt
AVD/: flaskApp.py  myAVD1.py  myDash1.py
AVD/assets/: svgAnim.js
DRAWIO/: ntsRuleChangeIssue.mmd
MISC/: fapiMM0.py  jstreeClick.py
PDT/: pdtCrudApp.py  pdtModels.py  project_flow_app.py  project_management.db
PPTstuff/: readme.md
SLIT/: SlitPubSubClient.py  ansiTest.py  ansiTest2.py  slClickDF.py  slMmaid.py  slitDRtline.py  slitDRtline2.py  slitDRtline3.py  slitDRtline4.py  slitDRtline5.py  slitDataEdit2.py  slitDataEdit6.py  slitDispPDT.py  slitDispPDT2.py  slitDispPDT3.py  slitDynaSelect.py  slitGvizPDT.py  slitPDTRdated.py  slitPDTdated.py  slitPDTentry.py  slitPDTgviz.py  slitPDTmulti.py  slitPDTplotly.py  slitPDTvis.py  slitSelectable.py
TNT_SL1/: init_db.py  init_test_data.py
drawIO/: viewer.diagrams.net_js_viewer-static.min.js
flowTest/: dash1.py  dash2.py  multiApp.py  tntSL1.py
hueyStuff/: dynaWrap.py  hueyRegistry.py
myDASH/: callbacks0.py  dashTTS.py  demoGallery.py  justHtml.py  myHello.html
myDTALE/: dashDtale.py  dashDtaleDemo.py  dtaleAbacus.py  miniDtale.py
myDash/: callbacks1.py  dashDriver..py  dtaleDemo.py  gvizBasic.py  sideBar.py
myMARIMO/: altairMap.py  cyto_graph.py  graph_app.py  gvizDemo.py  mindmap.py  mindmap2.py  mindmap4.py  my_react_component.js  reactive_quak.py  tldraw_colorpicker.py
myMarimo/: Digraph.gv  altairChart.py  cytoTest.py  gvizAnyDemo.py  marimo101.py  marimoNetwork.py  mindmap3.py  network_graph.py  pdtD3test.py  pdtWithD3  pygDemo.py
myPYG/: pygDashDemo.py  pygDemo.py  pygFlask.py
mySOLARA/: solDtale.py  solPyg.py  solPygIframe.py
mySolara/: sol.py
nice-dag/: .gitignore  pnpm-lock.yaml  pnpm-workspace.yaml
piggy/: jwhich.java
(+175 files in other folders)
