[project]
name = "max_examples"
version = "0.1.0"
authors = [
    {name = "maxMidius"},
]
description = "Collection of examples and tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["max", "tools", "examples"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "panel[fastapi]",
    "hvplot",
    "pygwalker",
    "Flask",
    "panel-graphic-walker[kernel]",
    "icecream",
    "rich",
    "dask",
    "tabulate",
    "panel-mermaid",
    "networkx[default]",
    "numpy",
    "pandas",
    "tabler-icons",
    "pathspec>=0.12.1",
    "igittigitt>=2.1.5",
    "mcp>=1.3.0",
    "mcp[server]>=1.3.0",
    "mcp[cli]>=1.3.0",
    "structlog>=25.2.0",
    "python-json-logger>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pylint>=3.3.3",
    "black>=24.10.0",
    "isort>=5.13.2",
]

[project.urls]
"Homepage" = "https://github.com/MarcusJellinghaus/mcp-server-filesystem"
"Bug Tracker" = "https://github.com/MarcusJellinghaus/mcp-server-filesystem/issues"
"Documentation" = "https://github.com/MarcusJellinghaus/mcp-server-filesystem#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
float_to_top = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
